--- a/src/main/resources/templates/adminWelcome.html
+++ b/src/main/resources/templates/adminWelcome.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>Admin Welcome</title>
+    <link rel="stylesheet" type="text/css" th:href="@{/css/style.css}" />
 </head>
 <body>
     <h2>Admin Welcome</h2>
