--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -2,6 +2,8 @@
 <html>
 <head>
     <title>Register</title>
+    <link rel="stylesheet" type="text/css" th:href="@{/css/style.css}" />
+    <script src="/js/validatePassword.js" type="text/javascript"></script>
 </head>
 <body>
     <h2>Register</h2>
@@ -9,6 +11,10 @@
         <div>
             <label>Email:</label>
             <input type="email" name="email" required>
+        </div>
+        <div>
+            <label>Password:</label>
+            <input type="password" name="password" required>
         </div>
         <div>
             <label>Password:</label>
